adding tests, reading/writing amrexinfo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,10 @@ if (CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(wavelet-compression PRIVATE stdc++fs)
     target_link_libraries(wavelet-compression-tests PRIVATE stdc++fs)
 endif()
+
+if  (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(wavelet-compression PUBLIC -fsanitize=address)
+    target_link_options(wavelet-compression PUBLIC -fsanitize=address)
+    target_compile_options(wavelet-compression-tests PUBLIC -fsanitize=address)
+    target_link_options(wavelet-compression-tests PUBLIC -fsanitize=address)
+endif()
