--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCES
     iterator.h
     argparse.cpp
     argparse.h
+    tmpdir.h
 )
 
 add_executable(wavelet-compression main.cpp ${SOURCES})
